fixing issue in table overflow on mobile

--- a/modules/widgets/table/table.scss
+++ b/modules/widgets/table/table.scss
@@ -46,6 +46,10 @@ $module: '.table';
   }
 }
 
+.table-wrapper {
+  overflow-x:scroll;
+}
+
 #{$module} {
   width: 100%;
 
